Improve: hanlde exception